--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@actions/exec": "^1.0.3",
     "@actions/tool-cache": "^1.3.0",
     "download": "^7.1.0",
+    "jest-runtime": "^25.1.0",
     "typed-rest-client": "^1.7.1"
   },
   "devDependencies": {
