--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
-    "@actions/tool-cache": "^1.3.4",
-    "download": "^8.0.0",
-    "typed-rest-client": "^1.7.3"
+    "@actions/http-client": "^1.0.8",
+    "@actions/tool-cache": "^1.3.4"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
-    "@types/download": "^6.2.4",
     "@zeit/ncc": "^0.22.1",
     "jest": "^25.5.0",
     "jest-circus": "^25.5.0",
