--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,18 @@ name: ci
 on:
   schedule:
     - cron: '0 10 * * *' # everyday at 10am
-  pull_request:
-    branches:
-      - master
-      - releases/v*
   push:
     branches:
-      - master
-      - releases/v*
+      - 'master'
+      - 'releases/v*'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - 'master'
+      - 'releases/v*'
+    paths-ignore:
+      - '**.md'
 
 jobs:
   ci:
