--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,11 @@ on:
     branches:
       - 'master'
       - 'releases/v*'
+    paths-ignore:
+      - '.github/upx-releases.json'
   pull_request:
-    branches:
-      - 'master'
-      - 'releases/v*'
+    paths-ignore:
+      - '.github/upx-releases.json'
 
 jobs:
   test:
