--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,12 @@
 name: ci
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   schedule:
-    - cron: '0 10 * * *' # everyday at 10am
+    - cron: '0 10 * * *'
   push:
     branches:
       - 'master'
@@ -50,6 +54,7 @@ jobs:
           files: |
             ./bin/firefox-history-merger*
           args: -fq
+
   install-only:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -72,7 +77,7 @@ jobs:
           version: ${{ matrix.version }}
           install-only: true
       -
-        name: verify
+        name: Verify
         run: |
           which upx
           upx --version
