--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "CrazyMax",
   "license": "MIT",
+  "packageManager": "yarn@3.6.3",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
