--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,3 +30,4 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage/clover.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
